fix(i18n): button text overflow
https://discord.com/channels/774491656643674122/776293233382653963/806828497242816522

--- a/src/btn.css
+++ b/src/btn.css
@@ -48,6 +48,11 @@ button {
   font-family: inherit;
 }
 
+/* fix `View in LibreScore` button text overflow */
+button:last-of-type {
+  width: unset !important;
+}
+
 svg {
   display: inline-block;
   margin-right: 5px;
